--- a/AndroidProject/SAEPatrimonio/app/src/main/res/layout/content_main.xml
+++ b/AndroidProject/SAEPatrimonio/app/src/main/res/layout/content_main.xml
@@ -38,7 +38,7 @@
     </RelativeLayout>
 
         <ImageView
-            android:id="@+id/imageView4"
+            android:id="@+id/leitura"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_alignStart="@+id/relativeLayout"
@@ -59,7 +59,7 @@
             android:id="@+id/imageView7"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:layout_alignStart="@+id/imageView4"
+            android:layout_alignStart="@+id/leitura"
             android:layout_alignTop="@+id/imageView6"
             app:srcCompat="@drawable/load" />
 
